
IMPORTANT NOTE: Development of FGC has been discontinued due to sunset phase starting on June 24, 2021. 
This means that I will no longer be testing this ruleset in FGC. I can only guarantee that it works in FGU.

FINISHED/FIXED:

GitHub Update #16
October 18, 2021
Removed deprecated Karma boxes on Talents and Spells sheets.
Fixed character attribute bonus to add to attribute value before checking step number.
Fixed NPCs to allow typing damage directly into CT. (stun damage still uses NPC sheet).

GitHub Update #15
August 31, 2021
Updated Git authentication.

GitHub Update #14
August 31, 2021
Fixed PC Actions tab adding multiples of descriptions on roll.
Fixed NPC rolls to correctly use modifier widget.
Added Karma Widget to control karma use. This only works for PCs, since NPCs don't have karma.
Karma will not be added to skill rolls, or pure karma die rolls.
Adding "karma" to PC Actions tab rolls will still function as before.

GitHub Update #13
July 14, 2021
Moved the changelog and TODO list to separate files due to their growing sizes. (previously was located inside comment block of base.xml)
Changed modifierstack to only reset on result. 
  This is to prevent stack from being cleared if the player picks up dice, but doesn't roll them.
Updated getRoll to show modified step numbers.
Updated StepLookup to use new formulaic method. (Yes, there is a formula for step numbers. No, it's not pretty or official.)
  This fixed using wrong step dice for steps 40+ as well as optimized code. This also removed the max step # limitation.

GitHub Update #12
July 13, 2021
Created "Step Roll" widget, (similar to the Mod window) that allows you to enter a step number and roll it.
Fixed "spellcasting test" rolls to be separate type from "spell" rolls, so they don't try to target/multitarget.

GitHub Update #11
July 01, 2021
Fixed karma rolls to only deduct once per action test. (not per target) Hopefully.
Automated recovery tests per day.