@@ -7,7 +7,7 @@
 
 <root>
 	<windowclass name="charsheet_main">
-		<margins control="5,5,5,5" />
+		<margins control="10,5,5,5" />
     <script file="campaign/scripts/char_main.lua" />
 		<sheetdata>
       
