@@ -1,0 +1,234 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+
+<!-- 
+  Please see the license.html file included with this distribution for 
+  attribution and copyright information.
+-->
+
+<root>
+
+  <!-- Earthdawn 4e -->
+  
+  <!-- Sidebar -->
+  
+    <icon name="sidebar_icon_recordtype_disciplines" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_races" file="graphics/sidebar/sidebar_icon_race.png" />
+    <icon name="sidebar_icon_recordtype_racials" file="graphics/sidebar/sidebar_icon_race.png" />
+    <icon name="sidebar_icon_recordtype_skills" file="graphics/sidebar/sidebar_icon_skill.png" />
+    <icon name="sidebar_icon_recordtype_spells" file="graphics/sidebar/sidebar_icon_spell.png" />
+    <icon name="sidebar_icon_recordtype_talents" file="graphics/sidebar/sidebar_icon_link_effects.png" />
+
+  <!-- Below is copied from CoreRPG -->
+
+    <!-- Fonts -->
+	<!-- NOTE: Color must be set via DesktopManager.setDockCategoryTextColor and DesktopManager.setDockTextColor functions -->
+  <!-- 
+    <font name="sidebar_dock_category">
+        <ttf file="graphics/fonts/Noto_Sans/NotoSans-Bold.ttf" name="Noto Sans Bold" size="18" />
+        <color value="#FFFFFF" />
+    </font>
+	<font name="sidebar_dock_entry">
+		<ttf file="graphics/fonts/Noto_Sans/NotoSans-Bold.ttf" name="Noto Sans Bold" size="18" />
+		<color value="#FFFFFF" />
+	</font>
+ -->
+ 
+    <!-- Frames -->
+  <!--  
+    <framedef name="sidebar_dock_category">
+        <bitmap file="graphics/sidebar/sidebar_dock_category.png" />
+		<offset>12,12,12,12</offset>
+    </framedef>
+    <framedef name="sidebar_dock_category_down">
+        <bitmap file="graphics/sidebar/sidebar_dock_category_down.png" />
+		<offset>12,12,12,12</offset>
+    </framedef>
+    <framedef name="sidebar_dock_entry_icon">
+		<bitmap file="graphics/sidebar/sidebar_dock_icon.png" />
+		<offset>12,12,12,12</offset>
+    </framedef>
+ 	<framedef name="sidebar_dock_entry">
+		<bitmap file="graphics/sidebar/sidebar_dock_entry.png" />
+		<offset>12,12,12,12</offset>
+	</framedef>
+	<framedef name="sidebar_dock_entry_down">
+		<bitmap file="graphics/sidebar/sidebar_dock_entry_down.png" />
+		<offset>12,12,12,12</offset>
+	</framedef>
+
+	<icon name="sidebar_action_expand" file="graphics/sidebar/sidebar_action_expand.png" />
+	<icon name="sidebar_action_collapse" file="graphics/sidebar/sidebar_action_collapse.png" />
+ -->
+ 
+	<!-- NOTE: Color must be set via DesktopManager.setDockCategoryIconColor function -->
+  <!-- 
+	<icon name="sidebar_dock_category_expanded" file="graphics/sidebar/sidebar_dock_category_expanded.png" />
+	<icon name="sidebar_dock_category_collapsed" file="graphics/sidebar/sidebar_dock_category_collapsed.png" />
+ -->
+ 
+	<!-- Sidebar icons -->
+	<!-- NOTE: Color must be set via DesktopManager.setDockCategoryIconColor function -->
+
+	<!-- Default -->
+  <!-- 
+	<icon name="sidebar_icon_default" file="graphics/sidebar/sidebar_icon_default.png" />
+ -->
+
+	<!-- CoreRPG -->
+  <!-- 
+    <icon name="sidebar_icon_link_ct" file="graphics/sidebar/sidebar_icon_link_ct.png" />
+    <icon name="sidebar_icon_link_ps" file="graphics/sidebar/sidebar_icon_link_ps.png" />
+    <icon name="sidebar_icon_link_calendar" file="graphics/sidebar/sidebar_icon_link_calendar.png" />
+    <icon name="sidebar_icon_link_pointerselection" file="graphics/sidebar/sidebar_icon_link_color.png" />
+    <icon name="sidebar_icon_link_modifiers" file="graphics/sidebar/sidebar_icon_link_modifiers.png" />
+    <icon name="sidebar_icon_link_effectlist" file="graphics/sidebar/sidebar_icon_link_effects.png" />
+    <icon name="sidebar_icon_link_options" file="graphics/sidebar/sidebar_icon_link_options.png" />
+
+    <icon name="sidebar_icon_link_sct" file="graphics/sidebar/sidebar_icon_link_sct.png" />
+    <icon name="sidebar_icon_link_tools" file="graphics/sidebar/sidebar_icon_link_tool.png" />
+
+    <icon name="sidebar_icon_link_library" file="graphics/sidebar/sidebar_icon_modules.png" />
+    <icon name="sidebar_icon_link_tokenbag" file="graphics/sidebar/sidebar_icon_assets.png" />
+
+    <icon name="sidebar_icon_recordtype_battle" file="graphics/sidebar/sidebar_icon_battle.png" />
+    <icon name="sidebar_icon_recordtype_charsheet" file="graphics/sidebar/sidebar_icon_charsheet.png" />
+    <icon name="sidebar_icon_recordtype_image" file="graphics/sidebar/sidebar_icon_image.png" />
+    <icon name="sidebar_icon_recordtype_item" file="graphics/sidebar/sidebar_icon_item.png" />
+    <icon name="sidebar_icon_recordtype_note" file="graphics/sidebar/sidebar_icon_note.png" />
+    <icon name="sidebar_icon_recordtype_npc" file="graphics/sidebar/sidebar_icon_npc.png" />
+    <icon name="sidebar_icon_recordtype_quest" file="graphics/sidebar/sidebar_icon_quest.png" />
+    <icon name="sidebar_icon_recordtype_story" file="graphics/sidebar/sidebar_icon_story.png" />
+    <icon name="sidebar_icon_recordtype_table" file="graphics/sidebar/sidebar_icon_table.png" />
+    <icon name="sidebar_icon_recordtype_treasureparcel" file="graphics/sidebar/sidebar_icon_treasureparcel.png" />
+    <icon name="sidebar_icon_recordtype_vehicle" file="graphics/sidebar/sidebar_icon_vehicle.png" />
+
+ -->
+	<!-- Common ruleset-specific record types -->
+  <!-- 
+    <icon name="sidebar_icon_recordtype_archetype" file="graphics/sidebar/sidebar_icon_background.png" />
+    <icon name="sidebar_icon_recordtype_background" file="graphics/sidebar/sidebar_icon_background.png" />
+    <icon name="sidebar_icon_recordtype_career" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_class" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_feat" file="graphics/sidebar/sidebar_icon_feat.png" />
+    <icon name="sidebar_icon_recordtype_race" file="graphics/sidebar/sidebar_icon_race.png" />
+    <icon name="sidebar_icon_recordtype_skill" file="graphics/sidebar/sidebar_icon_skill.png" />
+    <icon name="sidebar_icon_recordtype_power" file="graphics/sidebar/sidebar_icon_fire.png" />
+    <icon name="sidebar_icon_recordtype_specialability" file="graphics/sidebar/sidebar_icon_fire.png" />
+    <icon name="sidebar_icon_recordtype_spell" file="graphics/sidebar/sidebar_icon_spell.png" />
+    <icon name="sidebar_icon_recordtype_talent" file="graphics/sidebar/sidebar_icon_feat.png" />
+ -->
+
+    <!-- AlienRpg -->
+    <!--
+    <icon name="sidebar_icon_recordtype_charship" file="graphics/sidebar/sidebar_icon_spaceship.png" />
+    <icon name="sidebar_icon_recordtype_planet" file="graphics/sidebar/sidebar_icon_planet.png" />
+    <icon name="sidebar_icon_recordtype_ship" file="graphics/sidebar/sidebar_icon_spaceship_2.png" />
+	-->
+
+    <!-- CallOfCthulhu7E -->
+    <!--
+    <icon name="sidebar_icon_recordtype_chase" file="graphics/sidebar/sidebar_icon_cthulhu.png" />
+    <icon name="sidebar_icon_recordtype_era" file="graphics/sidebar/sidebar_icon_cthulhu.png" />
+    <icon name="sidebar_icon_recordtype_occupation" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_talent" file="graphics/sidebar/sidebar_icon_feat.png" />
+	-->
+
+    <!-- Conan -->
+    <!--
+    <icon name="sidebar_icon_recordtype_enchantment" file="graphics/sidebar/sidebar_icon_potion.png" />
+    <icon name="sidebar_icon_recordtype_talents" file="graphics/sidebar/sidebar_icon_feat.png" />
+	-->
+
+    <!-- ICRPG -->
+    <!--
+    <icon name="sidebar_icon_recordtype_bioform" file="graphics/sidebar/sidebar_icon_race.png" />
+    <icon name="sidebar_icon_recordtype_tag" file="graphics/sidebar/sidebar_icon_default.png" />
+	-->
+
+    <!-- MGT2 -->
+    <!--
+	<icon name="sidebar_icon_recordtype_battle" file="graphics/sidebar/sidebar_icon_battle_3.png" />
+	<icon name="sidebar_icon_recordtype_charsheet" file="graphics/sidebar/sidebar_icon_charsheet_2.png" />
+	<icon name="sidebar_icon_recordtype_item" file="graphics/sidebar/sidebar_icon_item_2.png" />
+    <icon name="sidebar_icon_recordtype_battlespacecraft" file="graphics/sidebar/sidebar_icon_spaceship_2.png" />
+    <icon name="sidebar_icon_recordtype_charspacecraft" file="graphics/sidebar/sidebar_icon_spaceship.png" />
+	<icon name="sidebar_icon_recordtype_homeworld" file="graphics/sidebar/sidebar_icon_planet.png" />
+    <icon name="sidebar_icon_recordtype_psionic" file="graphics/sidebar/sidebar_icon_fire.png" />
+    <icon name="sidebar_icon_recordtype_race" file="graphics/sidebar/sidebar_icon_race_3.png" />
+    <icon name="sidebar_icon_recordtype_spacecraft" file="graphics/sidebar/sidebar_icon_spaceship.png" />
+    <icon name="sidebar_icon_recordtype_tradegoods" file="graphics/sidebar/sidebar_icon_treasureparcel_2.png" />
+    <icon name="sidebar_icon_recordtype_worlds" file="graphics/sidebar/sidebar_icon_system_2.png" />
+    <icon name="sidebar_icon_recordtype_vehicle" file="graphics/sidebar/sidebar_icon_vehicle_4.png" />
+	-->
+
+	<!-- Mongoose Traveller 1E -->
+	<!--
+	<icon name="sidebar_icon_recordtype_battle" file="graphics/sidebar/sidebar_icon_battle_3.png" />
+	<icon name="sidebar_icon_recordtype_charsheet" file="graphics/sidebar/sidebar_icon_charsheet_2.png" />
+	<icon name="sidebar_icon_recordtype_item" file="graphics/sidebar/sidebar_icon_item_2.png" />
+	<icon name="sidebar_icon_recordtype_homeworld" file="graphics/sidebar/sidebar_icon_planet.png" />
+	<icon name="sidebar_icon_recordtype_psionic" file="graphics/sidebar/sidebar_icon_fire.png" />
+	<icon name="sidebar_icon_recordtype_race" file="graphics/sidebar/sidebar_icon_race_3.png" />
+    <icon name="sidebar_icon_recordtype_vehicle" file="graphics/sidebar/sidebar_icon_vehicle_4.png" />
+    <icon name="sidebar_icon_recordtype_worlds" file="graphics/sidebar/sidebar_icon_system_2.png" />
+	-->
+
+	<!-- PFRPG2 (Common) -->
+	<!--
+    <icon name="sidebar_icon_recordtype_heritage" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_trait" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_lookupdate" file="graphics/sidebar/sidebar_icon_default.png" />
+	-->
+
+    <!-- RolemasterClassic (Common) -->
+    <!--
+    <icon name="sidebar_icon_recordtype_profession" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_spelllist" file="graphics/sidebar/sidebar_icon_spell.png" />
+	-->
+
+	<!-- SavageWorlds -->
+	<!--
+    <icon name="sidebar_icon_recordtype_archetype" file="graphics/sidebar/sidebar_icon_class.png" />
+    <icon name="sidebar_icon_recordtype_edge" file="graphics/sidebar/sidebar_icon_feat.png" />
+    <icon name="sidebar_icon_recordtype_hindrance" file="graphics/sidebar/sidebar_icon_hindrance.png" />
+    <icon name="sidebar_icon_recordtype_monstrousability" file="graphics/sidebar/sidebar_icon_bang.png" />
+
+    <icon name="sidebar_icon_recordtype_hq" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_hqroom" file="graphics/sidebar/sidebar_icon_default.png" />
+	
+    <icon name="sidebar_icon_recordtype_cyberware" file="graphics/sidebar/sidebar_icon_cpu.png" />
+    <icon name="sidebar_icon_recordtype_modification" file="graphics/sidebar/sidebar_icon_default.png" />
+	-->
+
+	<!-- Symbaroum -->
+	<!--
+    <icon name="sidebar_icon_recordtype_abilities" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_archetypes" file="graphics/sidebar/sidebar_icon_background.png" />
+    <icon name="sidebar_icon_recordtype_mystical_powers" file="graphics/sidebar/sidebar_icon_spell.png" />
+    <icon name="sidebar_icon_recordtype_mystical_traditions" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_races" file="graphics/sidebar/sidebar_icon_race.png" />
+    <icon name="sidebar_icon_recordtype_referencetables" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_rituals" file="graphics/sidebar/sidebar_icon_fire.png" />
+    <icon name="sidebar_icon_recordtype_traits" file="graphics/sidebar/sidebar_icon_default.png" />
+	-->
+
+	<!-- Vaesen -->
+	<!--
+    <icon name="sidebar_icon_recordtype_headquarters" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_upgrade" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_vaesen" file="graphics/sidebar/sidebar_icon_default.png" />
+	-->
+
+	<!-- VTM5TH -->
+	<!--
+    <icon name="sidebar_icon_recordtype_clan" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_discipline" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_merit" file="graphics/sidebar/sidebar_icon_default.png" />
+    <icon name="sidebar_icon_recordtype_predator" file="graphics/sidebar/sidebar_icon_npc.png" />
+	-->
+
+	<!-- WOIN -->
+	<!--
+    <icon name="sidebar_icon_recordtype_exploit" file="graphics/sidebar/sidebar_icon_feat.png" />
+	-->
+</root>
